# franka-workspace

./: .gdb_history  .gitignore  CMakeLists.txt  Dockerfile
projects/: CMakeLists.txt
projects/cartesian/: CMakeLists.txt
projects/cartesian/source/: main.cpp
projects/controller/: CMakeLists.txt
projects/controller/include/: app.hpp  pipeline.hpp
projects/controller/include/data/: ringbuffer.hpp  triplebuffer.hpp
projects/controller/source/: app.cpp  config.cpp  exception.cpp  main.cpp  pipeline.cpp  shutdown.cpp
projects/executables/: CMakeLists.txt
projects/executables/asclepius/: CMakeLists.txt
projects/executables/asclepius/include/: config.hpp  control.hpp  franka.hpp  haptic.hpp  logging.hpp  pipeline.hpp  servo.hpp  shutdown.hpp
projects/executables/asclepius/source/: config.cpp  main.cpp  pipeline.cpp
projects/executables/cartesian/source/: examples_common.cpp
projects/executables/controller/: CMakeLists.txt
projects/executables/controller/include/: config.hpp  filter.hpp  pipeline.hpp  shutdown.hpp
projects/executables/controller/include/data/: triplebuffer.hpp
projects/executables/controller/source/: filter.cpp  main.cpp  pipeline.cpp
projects/executables/haptic/source/: main.cpp
projects/executables/realtime_jitter/: CMakeLists.txt
projects/executables/realtime_jitter/include/: datalog.hpp  nanoloop.hpp
projects/executables/realtime_jitter/source/: main.cpp
projects/executables/state_reader/: CMakeLists.txt
projects/executables/state_reader/source/: main.cpp
projects/executables/tests/: CMakeLists.txt
projects/executables/tests/franka/: CMakeLists.txt
projects/executables/tests/franka/source/: main.cpp
projects/executables/tests/haptic/: CMakeLists.txt
projects/executables/tests/haptic/source/: acceleration_graph.cpp  analysis.cpp  graph_latest.cpp  lowpass_graph.cpp  main.cpp
projects/haptic/: CMakeLists.txt
projects/haptic/source/: main.cpp
projects/libraries/: CMakeLists.txt
projects/libraries/bilateralcontrol/: CMakeLists.txt
projects/libraries/bilateralcontrol/include/bilateralcontrol/: bilateralcontrol.hpp  common.hpp  control.hpp  franka.hpp  haptic.hpp  pipeline.hpp  servo.hpp  shutdown.hpp  synclogger.hpp  system.hpp
projects/libraries/bilateralcontrol/source/: common.cpp  franka.cpp  haptic.cpp  shutdown.cpp
projects/libraries/realtime_loop/: CMakeLists.txt
projects/libraries/realtime_loop/include/realtime_loop/: exception.hpp  monoloop.hpp  schedtimer.hpp
projects/libraries/realtime_loop/include/realtime_loop/control/: cache.hpp  ringbuffer.hpp  triplebuffer.hpp
projects/libraries/realtime_loop/include/realtime_loop/telemetry/: asynclogger.hpp  loopinfo.hpp  scopedtimer.hpp
projects/libraries/realtime_loop/source/: exception.cpp
projects/libraries/realtimeloop/: CMakeLists.txt
projects/libraries/realtimeloop/include/realtimeloop/: asynclogger.hpp  exception.hpp  monoloop.hpp  scopedtimer.hpp  serialization.hpp
projects/libraries/realtimeloop/include/realtimeloop/control/: filter.hpp  firstohold.hpp  ringbuffer.hpp  triplebuffer.hpp
projects/libraries/realtimeloop/include/realtimeloop/telemetry/: scopedtimer.hpp
projects/libraries/realtimeloop/source/: exception.cpp
projects/state_reader/: CMakeLists.txt
projects/visualizer/: CMakeLists.txt
projects/visualizer/include/: app.hpp  config.hpp  menu.hpp
projects/visualizer/source/: app.cpp  config.cpp  entry.cpp  main.cpp  menu.cpp
